client/src/StyleSheets/noteModal.css
@import url(../StyleSheets/App.css);
.addNewNoteBtn {
	position: fixed !important;
	bottom: 2rem;
	right: 2rem;
	height: 4rem;
	width: 4rem;
	z-index: 100;
	border-radius: 40em;
	font-size: 2rem;
	font-weight: 700;
	color: white;
	text-align: center;
	letter-spacing: -0.24px;
	backdrop-filter: blur(7px) saturate(191%) !important;
	background-color: rgba(43, 52, 76, 0.56) !important;
	border: 1px solid rgba(255, 255, 255, 0.125) !important;
}
.modalCard {
	backdrop-filter: blur(7px) saturate(191%);
	background-color: rgba(43, 52, 76, 0.56);
	border: 1px solid rgba(255, 255, 255, 0.125);
	color: white;
}
.modal-title {
	font-family: var(--secondaryFont);
	font-weight: 600;
}
.col-form-label {
	font-family: var(--secondaryFont);
}
.charCounter {
	font-weight: 300;
}
.modal.fade .modal-dialog {
	transform: scale(0.95);
	transition: transform 0.16s var(--ease-pro);
}
.modal.show .modal-dialog {
	transform: scale(1);
}

